tests/baselines/reference/ClassAndModuleThatMergeWithStaticVariableAndExportedVarThatShareAName.errors.txt
ClassAndModuleThatMergeWithStaticVariableAndExportedVarThatShareAName.ts(4,12): error TS2300: Duplicate identifier 'Origin'.
ClassAndModuleThatMergeWithStaticVariableAndExportedVarThatShareAName.ts(8,16): error TS2300: Duplicate identifier 'Origin'.
ClassAndModuleThatMergeWithStaticVariableAndExportedVarThatShareAName.ts(16,16): error TS2300: Duplicate identifier 'Origin'.
ClassAndModuleThatMergeWithStaticVariableAndExportedVarThatShareAName.ts(20,20): error TS2300: Duplicate identifier 'Origin'.


==== ClassAndModuleThatMergeWithStaticVariableAndExportedVarThatShareAName.ts (4 errors) ====
    class Point {
        constructor(public x: number, public y: number) { }
    
        static Origin: Point = { x: 0, y: 0 };
               ~~~~~~
!!! error TS2300: Duplicate identifier 'Origin'.
    }
    
    module Point {
        export var Origin = ""; //expected duplicate identifier error
                   ~~~~~~
!!! error TS2300: Duplicate identifier 'Origin'.
    }
    
    
    module A {
        export class Point {
            constructor(public x: number, public y: number) { }
    
            static Origin: Point = { x: 0, y: 0 };
                   ~~~~~~
!!! error TS2300: Duplicate identifier 'Origin'.
        }
    
        export module Point {
            export var Origin = ""; //expected duplicate identifier error
                       ~~~~~~
!!! error TS2300: Duplicate identifier 'Origin'.
        }
    }